feat: add booking history chart for admin dashboard with tested APIs